fixed overflowing issue

--- a/styles.css
+++ b/styles.css
@@ -381,7 +381,7 @@ border:none;
   perspective: 800px; 
   padding:0;
   margin:0;
-  
+    text-decoration: none;
  }
 
 
@@ -397,6 +397,7 @@ border:none;
   position: relative; 
   transition: transform 0.5s ease, box-shadow 0.5s ease;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    
   z-index: 0;
 } 
 .item:hover img{
@@ -412,7 +413,7 @@ border:none;
   top: 90%;               
   left: 50%;   
   position: absolute;   
-  
+ text-decoration: none;
   align-items: center;
   text-align: center;
   max-height: 100%;
@@ -616,7 +617,7 @@ border:none;
 .text-container h1,
 .text-container h2,
 .text-container h3{
-  font-size: 28px; 
+  font-size: 26px; 
  
   margin: 20px; 
   justify-content: center;
